feat: create psql realization for transactions, migrations correctness, replenishment endpoint
