# docs/swagger.yaml
@@ -150,10 +150,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/responses.Services'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/responses.ErrorResp'
         "500":
           description: Internal Server Error
           schema:
@@ -231,10 +227,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/responses.UserWallets'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/responses.ErrorResp'
         "500":
           description: Internal Server Error
           schema:
